--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Travel Map site created using create-react-app"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
