--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js" onload="window.turf = turf;"></script>
     <!-- <script src="https://apis.google.com/js/api:client.js"></script> -->
     <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
     <meta
